init home; add redirect to old site

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,24 @@
 ---
 title: ホーム | サンシャイン研究・開発
 description: スーパーマリオサンシャイン研究・開発のホームページです。
-createdAt: 2023/02/26(日) 01:00:00
-updatedAt: 2023/02/26(日) 01:00:00
+createdAt: 2023/02/26(日) 01:00:00 +0900
+updatedAt: 2023/03/13(月) 18:21:48 +0900
 author: サポミク
 h1: ホーム
 ---
+
+## 概要
+スーパーマリオサンシャイン研究・開発関連の情報をまとめるサイト(にする予定)です。
+
+[旧サイトはこちらへ](https://sms-old.sup39.dev/)
+
+## リンク集
+### 研究関連
+- [SMS RAM Map](https://docs.google.com/spreadsheets/d/1ElTW-akaTUF9OC2pIFR9-7aVPwpJ54AdEVJyJ_jvg0E/edit?usp=sharing)
+- [Sunshine ShoutWiki](http://smswiki.shoutwiki.com/wiki/Main_Page)
+### RTA関連
+- [スーパーマリオサンシャインRTAインフォ](https://smsrta.wordpress.com/)
+- [SMS Guide](https://smscommunity.github.io/sms-guide/)
+### その他
+- [このサイトのソースコード](https://github.com/sup39/sms.sup39.dev)
+- [旧サイト](https://sms-old.sup39.dev/)
